@@ -4,6 +4,7 @@ DFHack future
     - masspit: designate caged creatures in a zone for pitting
   Misc improvements:
     - exterminate: renamed from slayrace, add help message
+    - autoSyndrome: disable by default
 
 DFHack v0.34.11-r3
 
